📝 docs: Add documatation for Show Openings
